                           New option MAILIN that can be set to either a mbox
                             or Maildir folder. New mail will be read from it
                             and the folder cleared every time Mixmaster
                             processes its pool, or at MAILINTIME intervals
                             (closes: #597043).
                           When sending type II messages interactivly you may
                             now choose a middleman remailer as the last hop
                             in your chain (closes: #481244).
                           If a footer.txt file exists its content will be
                             appended to outgoing messages leaving the remailer
                             network at this hop (closes: #490117).
                           List known mixmasters/cpunks in remailer-conf reply
                             (closes: #480330).
                           When expiring packet ids from id.log also expire
                             packets that are dated more than half a year in 
                             the future.  That way we get rid of invalid 
                             packets introduced by the switch to a binary file.
                           The stats in remailer-stats replies always had a 
                             peak at 00:00 GMT which was wrong. Fixed. 
                             (closes: #597688).
                           Mixmaster in daemon mode reloads configuration on 
                             SIGHUP. Upon receiving SIGTERM or SIGINT it will 
                             finish its current queue run and then exit
                             successfully.
                           Fixed a bug with reading armored keyrings consisting
                             of more than one armored block or having comments
                              in front of the one armored block.
                           The secret pgp keyring is now stored ASCII armored 